# barnamala

./: .gitignore  README.md  pyproject.toml
configs/: student.yaml  student_distilled.yaml  student_distilled_clean.yaml  teacher_a.yaml  teacher_b.yaml  teacher_c.yaml
paper/: .gitignore  main-anon.tex  main-arxiv.tex  paper-common.tex  refs.bib
paper/figures/: architecture.tex
paper/sections/: 00-abstract.tex  01-intro.tex  02-related.tex  03-method.tex  04a-exp-parity.tex  04b-exp-ablation.tex  04c-exp-transfer.tex  04d-exp-ood.tex  05-analysis.tex  06-discussion.tex  07-conclusion.tex
results/: SUMMARY.md  digit_transfer.json  efficiency_metrics.json  error_structure.json  ood_eval.json  robustness.json  teacher_logits_clean.npz
scripts/: analyze_errors.py  audit_paper_numbers.py  backtranslate.py  check_anonymity.py  digit_transfer.py  download_cmaterdb.sh  download_data.sh  dump_error_structure.py  dump_teacher_logits.py  efficiency_metrics.py  eval_ensemble.py  eval_nhcd_mallanet_ood.py  eval_nhcd_ood.py  eval_prashanth_mallanet_ood.py  eval_prashanth_ood.py  evaluate_checkpoint.py  fig_efficiency.py  fig_error_floor.py  fig_robustness.py  fig_significance_frontier.py  fig_teacher_diversity.py  fig_transfer.py  pull_results.sh  reproduce_mallanet.py  robustness_eval.py  run_mcnemar.py  run_phase2.sh  run_seeds.sh
tests/: test_config.py  test_data.py  test_distill.py  test_evaluate.py  test_mallanet_baseline.py  test_models.py  test_robustness.py  test_smoke_real_data.py  test_stats.py  test_train_components.py  test_trainer.py  test_transforms.py
(+112 files in other folders)
