[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devnet"
version = "0.1.0"
description = "Statistically-defended SOTA for handwritten Devanagari character recognition"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "numpy",
    "scikit-learn",
    "pyyaml",
    "pillow",
    "tqdm",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
